# ayumi-lv2

./: .editorconfig  .gitignore  CMakeLists.txt  ayumi-lv2.c  ayumi-lv2.ttl  ayumi_synth.c  ayumi_synth.h  build.sh  midi.md
files/: aymidi.ttl  ayumi-lv2.ins  manifest.ttl
src/: CMakeLists.txt  aymidi.c  synth.c  synth.h
